# constant-cstr

./: Cargo.toml  LICENCE  README.md
src/: lib.rs
